tests fixed